--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "uniswap-skim",
+  "name": "uniswap-skim-d",
   "version": "1.0.0",
   "description": "scripts to scan all of the uniswapV2 contracts and search for mismatched balances/reserves",
   "scripts": {
-    "update": "node ./scripts/uni-markets.js",
-    "skim": "node ./scripts/skim.js",
+    "update": "node ./scripts/uni-markets9.js",
+    "skim": "node ./scripts/skim9.js",
     "test": "xo"
   },
   "author": "@nicholashc",
   "repository": "github.com/nicholashc/uniswap-skim/",
   "license": "Unlicense",
   "dependencies": {
-    "axios": "^0.20.0",
+    "axios": "^0.21.0",
     "web3": "^1.3.0"
   },
   "devDependencies": {
