--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "scripts to scan all of the uniswapV2 contracts and search for mismatched balances/reserves",
   "scripts": {
-    "u": "node ./scripts/uni-markets9.js",
+    "uni10": "node ./scripts/uni-markets10.js",
+    "ueror": "node ./scripts/uni-markets9.js",
     "skim": "node ./scripts/skim9.js",
     "test": "xo"
   },
